[package]
name = "youarel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum"]
tls = ["dep:rustls", "dep:rcgen"]
default = ["axum", "tls"]

[dependencies]
anyhow = "1.0.71"
axum = { git = "https://github.com/tokio-rs/axum", features = ["tracing", "http2"], optional = true }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
base64 = "0.21.0"
blake3 = { version = "1.3.3" }
clap = { version = "4.2.7", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
directories = "5.0.1"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["full"] }
lazy_static = "1.4.0"
rcgen = { version = "0.10.0", optional = true }
rustls = { version = "0.21.1", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
sled = "0.34.7"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["steer"] }
tower-http = { version = "0.4.0", features = ["fs"] }
trace = "0.1.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["local-time"] }
url = { version = "2.3.1", features = ["serde"] }

